# ui

./: .gitignore  README.md  pyproject.toml
ui/: __init__.py  __main__.py  entry.py
ui/gui/: actions.py  application.py  widgets.py
ui2/: __init__.py  __main__.py  entry.py
