[tool.poetry]
name = "ui"
version = "0.1.1"
description = ""
authors = ["Alexander B. Ustinov <ustinov@spbau.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyqt6 = "^6.5.2"

[tool.poetry.scripts]
ui = "ui.entry:help"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.2"
nuitka = "^1.9.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
